--- a/TicTacToe/mainwindow.ui
+++ b/TicTacToe/mainwindow.ui
@@ -17,8 +17,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>140</y>
+      <x>340</x>
+      <y>130</y>
       <width>131</width>
       <height>81</height>
      </rect>
@@ -30,8 +30,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>140</y>
+      <x>480</x>
+      <y>130</y>
       <width>131</width>
       <height>81</height>
      </rect>
@@ -43,8 +43,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>140</y>
+      <x>610</x>
+      <y>130</y>
       <width>131</width>
       <height>81</height>
      </rect>
@@ -56,8 +56,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>230</y>
+      <x>340</x>
+      <y>220</y>
       <width>131</width>
       <height>81</height>
      </rect>
@@ -69,8 +69,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>230</y>
+      <x>480</x>
+      <y>220</y>
       <width>131</width>
       <height>81</height>
      </rect>
@@ -82,8 +82,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>230</y>
+      <x>610</x>
+      <y>220</y>
       <width>131</width>
       <height>81</height>
      </rect>
@@ -95,8 +95,8 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>330</y>
+      <x>340</x>
+      <y>320</y>
       <width>131</width>
       <height>81</height>
      </rect>
@@ -108,8 +108,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>330</y>
+      <x>480</x>
+      <y>320</y>
       <width>131</width>
       <height>81</height>
      </rect>
@@ -121,8 +121,8 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>330</y>
+      <x>610</x>
+      <y>320</y>
       <width>131</width>
       <height>81</height>
      </rect>
@@ -134,8 +134,8 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>0</y>
+      <x>160</x>
+      <y>10</y>
       <width>112</width>
       <height>32</height>
      </rect>
@@ -144,37 +144,11 @@
      <string>PushButton</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_10">
-    <property name="geometry">
-     <rect>
-      <x>370</x>
-      <y>40</y>
-      <width>58</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="radioButton">
-    <property name="geometry">
-     <rect>
-      <x>310</x>
-      <y>0</y>
-      <width>100</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>RadioButton</string>
-    </property>
-   </widget>
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>140</y>
+      <x>410</x>
+      <y>130</y>
       <width>61</width>
       <height>271</height>
      </rect>
@@ -189,8 +163,8 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>140</y>
+      <x>560</x>
+      <y>130</y>
       <width>61</width>
       <height>271</height>
      </rect>
@@ -205,8 +179,8 @@
    <widget class="Line" name="line_3">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>220</y>
+      <x>310</x>
+      <y>210</y>
       <width>411</width>
       <height>20</height>
      </rect>
@@ -224,8 +198,8 @@
    <widget class="Line" name="line_4">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>310</y>
+      <x>310</x>
+      <y>300</y>
       <width>411</width>
       <height>20</height>
      </rect>
@@ -243,8 +217,8 @@
    <widget class="QLabel" name="label_11">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>210</y>
+      <x>420</x>
+      <y>200</y>
       <width>58</width>
       <height>16</height>
      </rect>
@@ -256,8 +230,8 @@
    <widget class="QLabel" name="label_12">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>210</y>
+      <x>570</x>
+      <y>200</y>
       <width>58</width>
       <height>16</height>
      </rect>
@@ -269,8 +243,8 @@
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>210</y>
+      <x>700</x>
+      <y>200</y>
       <width>58</width>
       <height>16</height>
      </rect>
@@ -282,8 +256,8 @@
    <widget class="QLabel" name="label_14">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>300</y>
+      <x>420</x>
+      <y>290</y>
       <width>58</width>
       <height>16</height>
      </rect>
@@ -295,8 +269,8 @@
    <widget class="QLabel" name="label_15">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>300</y>
+      <x>570</x>
+      <y>290</y>
       <width>58</width>
       <height>16</height>
      </rect>
@@ -308,8 +282,8 @@
    <widget class="QLabel" name="label_16">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>300</y>
+      <x>700</x>
+      <y>290</y>
       <width>58</width>
       <height>16</height>
      </rect>
@@ -321,8 +295,8 @@
    <widget class="QLabel" name="label_17">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>390</y>
+      <x>420</x>
+      <y>380</y>
       <width>58</width>
       <height>16</height>
      </rect>
@@ -334,8 +308,8 @@
    <widget class="QLabel" name="label_18">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>390</y>
+      <x>570</x>
+      <y>380</y>
       <width>58</width>
       <height>16</height>
      </rect>
@@ -347,8 +321,8 @@
    <widget class="QLabel" name="label_19">
     <property name="geometry">
      <rect>
-      <x>600</x>
-      <y>390</y>
+      <x>700</x>
+      <y>380</y>
       <width>58</width>
       <height>16</height>
      </rect>
@@ -357,63 +331,11 @@
      <string>9</string>
     </property>
    </widget>
-   <widget class="QLabel" name="player1">
-    <property name="geometry">
-     <rect>
-      <x>90</x>
-      <y>150</y>
-      <width>58</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Player1</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="player2">
-    <property name="geometry">
-     <rect>
-      <x>680</x>
-      <y>150</y>
-      <width>58</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Player2</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_20">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>60</y>
-      <width>81</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_21">
-    <property name="geometry">
-     <rect>
-      <x>670</x>
-      <y>60</y>
-      <width>91</width>
-      <height>81</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>TextLabel</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>180</y>
+      <x>90</x>
+      <y>210</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -425,8 +347,8 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>180</y>
+      <x>170</x>
+      <y>210</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -438,8 +360,8 @@
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>220</y>
+      <x>90</x>
+      <y>250</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -451,8 +373,8 @@
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>220</y>
+      <x>170</x>
+      <y>250</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -464,8 +386,8 @@
    <widget class="QPushButton" name="pushButton_6">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>260</y>
+      <x>90</x>
+      <y>290</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -477,8 +399,8 @@
    <widget class="QPushButton" name="pushButton_7">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>260</y>
+      <x>170</x>
+      <y>290</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -490,8 +412,8 @@
    <widget class="QPushButton" name="pushButton_8">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>300</y>
+      <x>90</x>
+      <y>330</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -503,8 +425,8 @@
    <widget class="QPushButton" name="pushButton_9">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>300</y>
+      <x>170</x>
+      <y>330</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -516,8 +438,8 @@
    <widget class="QPushButton" name="pushButton_10">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>340</y>
+      <x>130</x>
+      <y>370</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -526,122 +448,83 @@
      <string>9</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_11">
+   <widget class="QLabel" name="label_22">
     <property name="geometry">
      <rect>
-      <x>720</x>
+      <x>140</x>
       <y>180</y>
-      <width>71</width>
-      <height>31</height>
+      <width>31</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>2</string>
+     <string>Turn:</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_12">
+   <widget class="QPushButton" name="start_game">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>220</y>
-      <width>71</width>
-      <height>31</height>
+      <x>340</x>
+      <y>20</y>
+      <width>112</width>
+      <height>32</height>
      </rect>
     </property>
     <property name="text">
-     <string>3</string>
+     <string>Start!</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_13">
+   <widget class="QLabel" name="turn">
     <property name="geometry">
      <rect>
-      <x>720</x>
-      <y>260</y>
-      <width>71</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>6</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_14">
-    <property name="geometry">
-     <rect>
-      <x>680</x>
-      <y>340</y>
-      <width>71</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>9</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_15">
-    <property name="geometry">
-     <rect>
-      <x>720</x>
-      <y>220</y>
-      <width>71</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>4</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_16">
-    <property name="geometry">
-     <rect>
-      <x>640</x>
+      <x>180</x>
       <y>180</y>
-      <width>71</width>
-      <height>31</height>
+      <width>91</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>1</string>
+     <string>Click on Start</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_17">
+   <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>300</y>
-      <width>71</width>
-      <height>31</height>
+      <x>80</x>
+      <y>90</y>
+      <width>191</width>
+      <height>81</height>
      </rect>
     </property>
-    <property name="text">
-     <string>7</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_18">
-    <property name="geometry">
-     <rect>
-      <x>640</x>
-      <y>260</y>
-      <width>71</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>5</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_19">
-    <property name="geometry">
-     <rect>
-      <x>720</x>
-      <y>300</y>
-      <width>71</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>8</string>
-    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label_20">
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_21">
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
