--- a/TicTacToe/mainwindow.ui
+++ b/TicTacToe/mainwindow.ui
@@ -131,19 +131,6 @@
      <string>TextLabel</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>10</y>
-      <width>112</width>
-      <height>32</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
-   </widget>
    <widget class="Line" name="line">
     <property name="geometry">
      <rect>
@@ -334,8 +321,8 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>210</y>
+      <x>110</x>
+      <y>250</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -347,8 +334,8 @@
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>210</y>
+      <x>190</x>
+      <y>250</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -360,8 +347,8 @@
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>250</y>
+      <x>110</x>
+      <y>290</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -373,8 +360,8 @@
    <widget class="QPushButton" name="pushButton_5">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>250</y>
+      <x>190</x>
+      <y>290</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -386,8 +373,8 @@
    <widget class="QPushButton" name="pushButton_6">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>290</y>
+      <x>110</x>
+      <y>330</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -399,8 +386,8 @@
    <widget class="QPushButton" name="pushButton_7">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>290</y>
+      <x>190</x>
+      <y>330</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -412,8 +399,8 @@
    <widget class="QPushButton" name="pushButton_8">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>330</y>
+      <x>110</x>
+      <y>370</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -425,8 +412,8 @@
    <widget class="QPushButton" name="pushButton_9">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>330</y>
+      <x>190</x>
+      <y>370</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -438,8 +425,8 @@
    <widget class="QPushButton" name="pushButton_10">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>370</y>
+      <x>150</x>
+      <y>410</y>
       <width>71</width>
       <height>31</height>
      </rect>
@@ -451,8 +438,8 @@
    <widget class="QLabel" name="label_22">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>180</y>
+      <x>150</x>
+      <y>200</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -464,10 +451,10 @@
    <widget class="QPushButton" name="start_game">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>20</y>
-      <width>112</width>
-      <height>32</height>
+      <x>290</x>
+      <y>30</y>
+      <width>291</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -477,8 +464,8 @@
    <widget class="QLabel" name="turn">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>180</y>
+      <x>190</x>
+      <y>200</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -487,11 +474,11 @@
      <string>Click on Start</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>90</y>
+      <x>90</x>
+      <y>110</y>
       <width>191</width>
       <height>81</height>
      </rect>
@@ -525,6 +512,19 @@
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>220</y>
+      <width>161</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
