Added background and finished UI Design

--- a/TicTacToe/Images.qrc
+++ b/TicTacToe/Images.qrc
@@ -3,5 +3,7 @@
         <file>image.png</file>
         <file>X.png</file>
         <file>../../Title.png</file>
+        <file>../../background2.jpg</file>
+        <file>../../Background.jpg</file>
     </qresource>
 </RCC>
