--- a/TicTacToe/mainwindow.ui
+++ b/TicTacToe/mainwindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-image: url(:/Background.jpg);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
@@ -22,6 +25,10 @@
       <width>131</width>
       <height>81</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="text">
      <string/>
@@ -36,6 +43,10 @@
       <height>81</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;</string>
+    </property>
     <property name="text">
      <string/>
     </property>
@@ -48,6 +59,11 @@
       <width>131</width>
       <height>81</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;
+</string>
     </property>
     <property name="text">
      <string/>
@@ -62,6 +78,10 @@
       <height>81</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;</string>
+    </property>
     <property name="text">
      <string/>
     </property>
@@ -74,6 +94,10 @@
       <width>131</width>
       <height>81</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="text">
      <string/>
@@ -88,6 +112,11 @@
       <height>81</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;
+</string>
+    </property>
     <property name="text">
      <string/>
     </property>
@@ -100,6 +129,10 @@
       <width>131</width>
       <height>81</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="text">
      <string/>
@@ -114,6 +147,10 @@
       <height>81</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;</string>
+    </property>
     <property name="text">
      <string/>
     </property>
@@ -127,6 +164,11 @@
       <height>81</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;
+</string>
+    </property>
     <property name="text">
      <string/>
     </property>
@@ -139,6 +181,10 @@
       <width>61</width>
       <height>271</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="lineWidth">
      <number>3</number>
@@ -155,6 +201,10 @@
       <width>61</width>
       <height>271</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="lineWidth">
      <number>3</number>
@@ -175,6 +225,11 @@
     <property name="autoFillBackground">
      <bool>false</bool>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;
+</string>
+    </property>
     <property name="lineWidth">
      <number>3</number>
     </property>
@@ -194,6 +249,11 @@
     <property name="autoFillBackground">
      <bool>false</bool>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: bold;
+color: white;
+</string>
+    </property>
     <property name="lineWidth">
      <number>3</number>
     </property>
@@ -206,12 +266,13 @@
      <rect>
       <x>420</x>
       <y>200</y>
-      <width>58</width>
+      <width>16</width>
       <height>16</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="text">
      <string>1</string>
@@ -222,12 +283,13 @@
      <rect>
       <x>570</x>
       <y>200</y>
-      <width>58</width>
+      <width>16</width>
       <height>16</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="text">
      <string>2</string>
@@ -238,12 +300,14 @@
      <rect>
       <x>700</x>
       <y>200</y>
-      <width>58</width>
+      <width>16</width>
       <height>16</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color: white;
+</string>
     </property>
     <property name="text">
      <string>3</string>
@@ -254,12 +318,16 @@
      <rect>
       <x>420</x>
       <y>290</y>
-      <width>58</width>
+      <width>16</width>
       <height>16</height>
      </rect>
     </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="text">
      <string>4</string>
@@ -270,12 +338,13 @@
      <rect>
       <x>570</x>
       <y>290</y>
-      <width>58</width>
+      <width>16</width>
       <height>16</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="text">
      <string>5</string>
@@ -286,12 +355,14 @@
      <rect>
       <x>700</x>
       <y>290</y>
-      <width>58</width>
+      <width>16</width>
       <height>16</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color: white;
+</string>
     </property>
     <property name="text">
      <string>6</string>
@@ -302,12 +373,13 @@
      <rect>
       <x>420</x>
       <y>380</y>
-      <width>58</width>
+      <width>16</width>
       <height>16</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="text">
      <string>7</string>
@@ -318,12 +390,13 @@
      <rect>
       <x>570</x>
       <y>380</y>
-      <width>58</width>
+      <width>16</width>
       <height>16</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="text">
      <string>8</string>
@@ -334,12 +407,14 @@
      <rect>
       <x>700</x>
       <y>380</y>
-      <width>58</width>
+      <width>16</width>
       <height>16</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color: white;
+</string>
     </property>
     <property name="text">
      <string>9</string>
@@ -355,7 +430,9 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color:white;
+</string>
     </property>
     <property name="text">
      <string>1</string>
@@ -371,7 +448,9 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color:white;
+</string>
     </property>
     <property name="text">
      <string>2</string>
@@ -387,7 +466,9 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color:white;
+</string>
     </property>
     <property name="text">
      <string>3</string>
@@ -403,7 +484,9 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color:white;
+</string>
     </property>
     <property name="text">
      <string>4</string>
@@ -419,8 +502,9 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold
-;</string>
+     <string notr="true">font: bold;
+color:white;
+</string>
     </property>
     <property name="text">
      <string>5</string>
@@ -436,7 +520,9 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color:white;
+</string>
     </property>
     <property name="text">
      <string>6</string>
@@ -452,7 +538,9 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color:white;
+</string>
     </property>
     <property name="text">
      <string>7</string>
@@ -468,7 +556,9 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color:white;
+</string>
     </property>
     <property name="text">
      <string>8</string>
@@ -484,7 +574,9 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: bold;</string>
+     <string notr="true">font: bold;
+color:white;
+</string>
     </property>
     <property name="text">
      <string>9</string>
@@ -498,6 +590,9 @@
       <width>32</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color:white;</string>
     </property>
     <property name="text">
      <string>Turn:</string>
@@ -514,6 +609,7 @@
     </property>
     <property name="styleSheet">
      <string notr="true">
+color:white;
 font: 75 18pt &quot;Chalkboard SE&quot;;</string>
     </property>
     <property name="text">
@@ -568,6 +664,9 @@ font: 75 18pt &quot;Chalkboard SE&quot;;</string>
       <height>20</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color:white;</string>
+    </property>
     <property name="text">
      <string/>
     </property>
@@ -582,7 +681,8 @@ font: 75 18pt &quot;Chalkboard SE&quot;;</string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color:red;
+     <string notr="true">color:white;
+font:bold;
 font: 24pt &quot;Arial&quot;;</string>
     </property>
     <property name="text">
@@ -599,7 +699,8 @@ font: 24pt &quot;Arial&quot;;</string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 13pt &quot;Chalkboard SE&quot;;</string>
+     <string notr="true">font: bold;
+color: white;</string>
     </property>
     <property name="text">
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Click on Start&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
@@ -618,6 +719,44 @@ font: 24pt &quot;Arial&quot;;</string>
      <string>TextLabel</string>
     </property>
    </widget>
+   <zorder>label_6</zorder>
+   <zorder>label_9</zorder>
+   <zorder>label_3</zorder>
+   <zorder>label_8</zorder>
+   <zorder>label_5</zorder>
+   <zorder>label_2</zorder>
+   <zorder>label</zorder>
+   <zorder>label_7</zorder>
+   <zorder>label_4</zorder>
+   <zorder>line_2</zorder>
+   <zorder>line</zorder>
+   <zorder>line_4</zorder>
+   <zorder>line_3</zorder>
+   <zorder>label_10</zorder>
+   <zorder>turn</zorder>
+   <zorder>label_22</zorder>
+   <zorder>label_13</zorder>
+   <zorder>label_16</zorder>
+   <zorder>label_19</zorder>
+   <zorder>pushButton_2</zorder>
+   <zorder>pushButton_3</zorder>
+   <zorder>pushButton_4</zorder>
+   <zorder>pushButton_5</zorder>
+   <zorder>pushButton_6</zorder>
+   <zorder>pushButton_7</zorder>
+   <zorder>pushButton_8</zorder>
+   <zorder>pushButton_9</zorder>
+   <zorder>pushButton_10</zorder>
+   <zorder>start_game</zorder>
+   <zorder>layoutWidget</zorder>
+   <zorder>winner</zorder>
+   <zorder>label_23</zorder>
+   <zorder>label_12</zorder>
+   <zorder>label_15</zorder>
+   <zorder>label_18</zorder>
+   <zorder>label_14</zorder>
+   <zorder>label_17</zorder>
+   <zorder>label_11</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
