Added background image and title image to the resource file so that it appears when program is run on a different machine

--- a/TicTacToe/mainwindow.ui
+++ b/TicTacToe/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-image: url(:/Background.jpg);</string>
+   <string notr="true">background-image: url(:/img/Background.jpg)</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
@@ -610,7 +610,7 @@ color:white;
     <property name="styleSheet">
      <string notr="true">
 color:white;
-font: 75 18pt &quot;Chalkboard SE&quot;;</string>
+font: 75 27pt &quot;Chalkboard SE&quot;;</string>
     </property>
     <property name="text">
      <string>Start!</string>
@@ -709,14 +709,17 @@ color: white;</string>
    <widget class="QLabel" name="label_23">
     <property name="geometry">
      <rect>
-      <x>370</x>
+      <x>380</x>
       <y>20</y>
-      <width>461</width>
+      <width>291</width>
       <height>81</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">background-image: url(:/img/Title.png)</string>
+    </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <zorder>label_6</zorder>
